Adicionando link com CSS

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello Word</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>HELLO WORLD!!!!!!</h1>
